fix credits overlap

--- a/style.css
+++ b/style.css
@@ -54,4 +54,6 @@ svg {
 .credits  {
   font-family: 'Courier New', Courier, monospace;
   font-size: .8em;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
